# pdydns

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: publish-container.yml
src/: config.rs  lib.rs  main.rs  powerdns.rs  public_ip.rs
